# sign-language-transcription

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.yaml
data/: data_utils.py  download_how2sign.sh  download_script.sh
src/slt/: bart.py  configs.py  custom_dataset.py  dinov2_feature_extractor.py  inference.py  main.py  main_bart.py  main_smollm.py  metrics.py  smollm.py  split_dataset.py  train.py  transforms.py  utils.py
